--- a/jobs.html
+++ b/jobs.html
@@ -13,17 +13,17 @@
 		<br>
 	</center>
 		<ul>
-			<li>Police officer</li>
-			<li>Paramedic</li>
-			<li>Doctor</li>
-			<li>Surgeon</li>
-			<li>Owozon packager</li>
-			<li>Owozon producer</li>
-			<li>Owozon deliverer</li>
-			<li>OwO Coworporation worker</li>
-			<li>Bankteller</li>
-			<li>Cash register at Shell gas station</li>
-			<li>Any headquarters in the OwO Trade Center</li>
+			<li>Police officer ($10/day)</li>
+			<li>Paramedic ($10/day)</li>
+			<li>Doctor ($12/day)</li>
+			<li>Surgeon ($15/day)</li>
+			<li>Owozon packager ($13/day)</li>
+			<li>Owozon producer ($15/day)</li>
+			<li>Owozon deliverer ($17/day)</li>
+			<li>OwO Coworporation worker ($11/day)</li>
+			<li>Bankteller ($8/day)</li>
+			<li>Cash register at Shell gas station ($5/day)</li>
+			<li>Any headquarters in the OwO Trade Center ($20/day)</li>
 		</ul>
 		<br>
 		<br>
