--- a/placestolive.html
+++ b/placestolive.html
@@ -13,6 +13,7 @@
 	</center>
 	<ul>
 		<li>7 Xenomorph Dr. (Apartment Complex)</li>
+		<li>16 Resin Dr. (Apartment Complex)</li>
 	</ul>
 	<br>
 	<br>
