--- a/jobs.html
+++ b/jobs.html
@@ -24,6 +24,11 @@
 			<li>Bankteller ($8/day)</li>
 			<li>Cash register at Shell gas station ($5/day)</li>
 			<li>Any headquarters in the OwO Trade Center ($20/day)</li>
+			<li>Firefighter ($10/day)</li>
+			<li>Priest ($7/day)</li>
+			<li>Mortician ($13/day)</li>
+			<li>Court Judge ($12/day)</li>
+			
 		</ul>
 		<br>
 		<br>
