--- a/placestolive.html
+++ b/placestolive.html
@@ -13,7 +13,8 @@
 	</center>
 	<ul>
 		<li>7 Xenomorph Dr. (Apartment Complex)</li>
-		<li>16 Resin Dr. (Apartment Complex)</li>
+		<li>16 Resin Sq. (Apartment Complex)</li>
+		<li>19 Resin Sq. (Apartment Complex)</li>
 	</ul>
 	<br>
 	<br>
