--- a/jobs.html
+++ b/jobs.html
@@ -28,6 +28,7 @@
 			<li>Priest ($7/day)</li>
 			<li>Mortician ($13/day)</li>
 			<li>Court Judge ($12/day)</li>
+			<li>Construction Worker ($13/day)</li>
 			
 		</ul>
 		<br>
