--- a/placestolive.html
+++ b/placestolive.html
@@ -12,9 +12,9 @@
 		<br>
 	</center>
 	<ul>
-		<li>7 Xenomorph Dr. (Apartment Complex)</li>
-		<li>16 Resin Sq. (Apartment Complex)</li>
-		<li>19 Resin Sq. (Apartment Complex)</li>
+		<li>7 Technoblade Ln. (Apartment Complex) $20</li>
+		<li>16 Resin Sq. (Apartment Complex) $17</li>
+		<li>19 Resin Sq. (Apartment Complex) $25</li>
 	</ul>
 	<br>
 	<br>
