--- a/jobs.html
+++ b/jobs.html
@@ -29,6 +29,9 @@
 			<li>Mortician ($13/day)</li>
 			<li>Court Judge ($12/day)</li>
 			<li>Construction Worker ($13/day)</li>
+			<li>Target cashier ($9/day)</li>
+			<li>Starbucks barista ($8/day)</li>
+			<li>Weekly post delivery ($13/week)</li>
 			
 		</ul>
 		<br>
